Updating lesson material imported from THW

--- a/lessons/thw-python/vars-types/variables.ipynb
+++ b/lessons/thw-python/vars-types/variables.ipynb
@@ -9,7 +9,7 @@
     {
      "cell_type": "markdown", 
      "source": [
-      "## Python, iPython, and the basics", 
+      "## Python, IPython, and the basics", 
       "", 
       "", 
       "* * * * *", 
@@ -22,7 +22,7 @@
      "source": [
       "## Introduction", 
       "", 
-      "This lecture is on basic programming in python. In order to do the examples, we are going to use an environment called iPython notebook.  I expect this lecture to be interactive, so stop me at any point if you have questions. The correct power dynamic is that people are the masters and the machines are servants. The computer is a hammer; it exists to help us get things done.  We can hammer nails with the handle, with the claw of the hammer; some of us even hammer nails with bricks.  But when you learn what part of the hammer works best with nails, and have some experience swinging it, you spend less time worrying about the hammering and more time worrying about your furniture."
+      "This lecture is on basic programming in python. In order to do the examples, we are going to use an environment called IPython notebook.  I expect this lecture to be interactive, so stop me at any point if you have questions. The correct power dynamic is that people are the masters and the machines are servants. The computer is a hammer; it exists to help us get things done.  We can hammer nails with the handle, with the claw of the hammer; some of us even hammer nails with bricks.  But when you learn what part of the hammer works best with nails, and have some experience swinging it, you spend less time worrying about the hammering and more time worrying about your furniture."
      ]
     }, 
     {
@@ -154,7 +154,7 @@
       "", 
       "## Python environments", 
       "", 
-      "You can run python commands in a handful of ways; you can create executable scripts, you can run the python interpreter, you can run iPython, or you can run iPython notebook.  iPython is an alternative to the built-in Python interpreter with some nice features.  iPython notebook gives you interactive access to the python interpreter from within a browser window, and it allows you to save your commands as a \"notebook\".", 
+      "You can run python commands in a handful of ways; you can create executable scripts, you can run the python interpreter, you can run IPython, or you can run IPython notebook.  IPython is an alternative to the built-in Python interpreter with some nice features.  IPython notebook gives you interactive access to the python interpreter from within a browser window, and it allows you to save your commands as a \"notebook\".", 
       "", 
       "Let's give the built-in interpreter a spin just this once.  Open a **Terminal** window, which starts your default shell.  Type "
      ]
@@ -206,7 +206,7 @@
       "", 
       "", 
       "", 
-      "iPython has more useful features for interactive use than the standard python interpreter, but it works in the same way--it is interacitve, and you get there from the command line.  iPython notebook uses javascript to allow you to enter python commands in your browser and show you the result in the browser.  We'll use it from here on out."
+      "IPython has more useful features for interactive use than the standard python interpreter, but it works in the same way--it is interacitve, and you get there from the command line.  IPython notebook uses javascript to allow you to enter python commands in your browser and show you the result in the browser.  We'll use it from here on out."
      ]
     }, 
     {
@@ -306,7 +306,7 @@
       "", 
       "", 
       "", 
-      "iPython has some nice help features. Let's say we want to know more about the integer data type. There are at least two ways to do this task:"
+      "IPython has some nice help features. Let's say we want to know more about the integer data type. There are at least two ways to do this task:"
      ]
     }, 
     {
@@ -378,7 +378,7 @@
       "", 
       "", 
       "", 
-      "If your code is in a file, you can execute it from the iPython shell with the **%run** command. Execute hello.py like so"
+      "If your code is in a file, you can execute it from the IPython shell with the **%run** command. Execute hello.py like so"
      ]
     }, 
     {
@@ -399,11 +399,11 @@
     {
      "cell_type": "markdown", 
      "source": [
-      "## Clearing iPython", 
+      "## Clearing IPython", 
       "", 
       "", 
       "", 
-      "To clear everything from iPython, use the %reset command."
+      "To clear everything from IPython, use the %reset command."
      ]
     }, 
     {
@@ -1187,7 +1187,7 @@
       "", 
       "", 
       "", 
-      "That wraps up this lesson. We tried out the iPython shell and got some experience with ints, floats, and strings. Along the way we talked about some philosophy and how programming is like hammering.  ", 
+      "That wraps up this lesson. We tried out the IPython shell and got some experience with ints, floats, and strings. Along the way we talked about some philosophy and how programming is like hammering.  ", 
       "", 
       "", 
       "", 
@@ -1197,7 +1197,7 @@
       "", 
       "", 
       "", 
-      "You can paste things into the ipython console by copying text from your machine with **ctrl+c** and typing **%paste** at the iPython prompt.  The **%paste** is necessary syntax for multi-line clipboard deposits."
+      "You can paste things into the ipython console by copying text from your machine with **ctrl+c** and typing **%paste** at the IPython prompt.  The **%paste** is necessary syntax for multi-line clipboard deposits."
      ]
     }, 
     {
