--- a/lessons/guide-pyblocks/pyblocks-index.ipynb
+++ b/lessons/guide-pyblocks/pyblocks-index.ipynb
@@ -8,6 +8,22 @@
   {
    "cells": [
     {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Basic Python Using IPythonBlocks"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Indexing, Slicing, and Update Operators"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
