--- a/lessons/guide-setdict/setdict-sets.ipynb
+++ b/lessons/guide-setdict/setdict-sets.ipynb
@@ -29,9 +29,9 @@
      "source": [
       "**Objectives**\n",
       "\n",
-      "*   Explain why some programs that use lists become proportionally slower as data sizes increase.\n",
-      "*   Explain the three adjectives in \"unordered collection of distinct values\".\n",
-      "*   Use a set to eliminate duplicate values from data."
+      "* Explain why some programs that use lists become proportionally slower as data sizes increase.\n",
+      "* Explain the three adjectives in \"unordered collection of distinct values\".\n",
+      "* Use a set to eliminate duplicate values from data."
      ]
     },
     {
@@ -632,12 +632,20 @@
      "source": [
       "**Key Points**\n",
       "\n",
-      "*   Use sets to store distinct unique values.\n",
-      "*   Create sets using `set()` or `{v1, v2, ...}`.\n",
-      "*   Sets are mutable, i.e., they can be updated in place like lists.\n",
-      "*   A loop over a set produces each element once, in arbitrary order.\n",
-      "*   Use sets to find unique things."
+      "* Use sets to store distinct unique values.\n",
+      "* Create sets using `set()` or `{v1, v2, ...}`.\n",
+      "* Sets are mutable, i.e., they can be updated in place like lists.\n",
+      "* A loop over a set produces each element once, in arbitrary order.\n",
+      "* Use sets to find unique things."
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
