Putting entire lesson in notebook form

--- a/lessons/guide-setdict/setdict-aggregate-learner.ipynb
+++ b/lessons/guide-setdict/setdict-aggregate-learner.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "setdict-aggregate"
+  "name": "setdict-aggregate-learner"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Aggregation"
+      "Aggregation (Learner Version)"
      ]
     },
     {
@@ -40,15 +40,6 @@
      "source": [
       "**Lesson**\n",
       "\n",
-      "* Use a *dictionary* to keep track of key-value pairs\n",
-      "* Its *keys* are like the elements of a set: unique, unordered, and immutable\n",
-      "* The *values* associated with the keys can be anything, but can only be looked up via their keys"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
       "* How early in the day did we see each kind of bird?"
      ]
     },
@@ -56,12 +47,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%%file some_birds.txt\n",
-      "2010-07-03    05:38    loon\n",
-      "2010-07-03    06:02    goose\n",
-      "2010-07-03    06:07    loon\n",
-      "2010-07-04    05:09    ostrich   # hallucinating?\n",
-      "2010-07-04    05:29    loon"
+      "!cat some_birds.txt"
      ],
      "language": "python",
      "metadata": {},
@@ -70,11 +56,15 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Writing some_birds.txt\n"
+        "2010-07-03    05:38    loon\r\n",
+        "2010-07-03    06:02    goose\r\n",
+        "2010-07-03    06:07    loon\r\n",
+        "2010-07-04    05:09    ostrich   # hallucinating?\r\n",
+        "2010-07-04    05:29    loon"
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -103,7 +93,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -131,7 +121,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -159,7 +149,7 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -197,7 +187,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -224,6 +214,7 @@
       "            result.add(bird)\n",
       "    return result\n",
       "\n",
+      "# Helper function.\n",
       "def count_by_bird(data):\n",
       "    '''How many times was each bird seen?'''\n",
       "    result = {}\n",
@@ -233,7 +224,7 @@
       "        result[bird] += 1\n",
       "    return result\n",
       "\n",
-      "# And test\n",
+      "# Test.\n",
       "print least_common_birds(entries)"
      ],
      "language": "python",
@@ -247,7 +238,7 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -258,14 +249,6 @@
       "* Use dictionaries to count things.\n",
       "* Initialize values from actual data instead of trying to guess what values could \"never\" occur."
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
