--- a/lessons/guide-setdict/setdict-dict-learner.ipynb
+++ b/lessons/guide-setdict/setdict-dict-learner.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "setdict-dict"
+  "name": "setdict-dict-learner"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Dictionaries"
+      "Dictionaries (Learner Version)"
      ]
     },
     {
