--- a/lessons/guide-setdict/setdict-json-learner.ipynb
+++ b/lessons/guide-setdict/setdict-json-learner.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "setdict-json"
+  "name": "setdict-json-learner"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "JSON"
+      "JSON (Learner Version)"
      ]
     },
     {
@@ -53,25 +53,7 @@
       "import json\n",
       "birthdays = {'Curie' : 1867, 'Hopper' : 1906, 'Franklin' : 1920}\n",
       "as_string = json.dumps(birthdays)\n",
-      "print as_string"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "{\"Curie\": 1867, \"Hopper\": 1906, \"Franklin\": 1920}\n"
-       ]
-      }
-     ],
-     "prompt_number": 1
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+      "print as_string\n",
       "print type(as_string)"
      ],
      "language": "python",
@@ -81,11 +63,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
+        "{\"Curie\": 1867, \"Hopper\": 1906, \"Franklin\": 1920}\n",
         "<type 'str'>\n"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -112,7 +95,7 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -215,25 +198,55 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* Inventory data file is now:\n",
-      "\n",
-      "```\n",
-      "{\"He\" : 1,\n",
-      " \"H\" : 4,\n",
-      " \"O\" : 3}\n",
-      "```\n",
-      "\n",
-      "* And formula data file is:\n",
-      "\n",
-      "```\n",
-      "{\"helium\"   : {\"He\" : 1},\n",
-      " \"water\"    : {\"H\" : 2, \"O\" : 1},\n",
-      " \"hydrogen\" : {\"H\" : 2}}\n",
-      "```\n",
-      "\n",
-      "* Slightly more complicated for non-programmers to edit\n",
-      "* But look at how it simplifies the nanotech inventory program:"
+      "* Inventory data file is now:"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!cat inventory-03.json"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{\"He\" : 1, \"H\" : 4, \"O\" : 3}"
+       ]
+      }
+     ],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* Formulas file is now:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!cat formulas-03.json"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{\"helium\"   : {\"He\" : 1},\r\n",
+        " \"water\"    : {\"H\" : 2, \"O\" : 1},\r\n",
+        " \"hydrogen\" : {\"H\" : 2}}"
+       ]
+      }
+     ],
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -273,14 +286,6 @@
       "* Using JSON reduces the code we have to write ourselves and improves interoperability with other programming languages.\n",
       "* JSON doesn't allow for comments, and doesn't handle aliasing."
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
