--- a/lessons/guide-setdict/setdict-sets-learner.ipynb
+++ b/lessons/guide-setdict/setdict-sets-learner.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "setdict-sets"
+  "name": "setdict-sets-learner"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Sets"
+      "Sets (Learner Version)"
      ]
     },
     {
@@ -553,13 +553,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%%file some_atoms.txt\n",
-      "Na\n",
-      "Fe\n",
-      "Na\n",
-      "Si\n",
-      "Pd\n",
-      "Na"
+      "!cat some_atoms.txt"
      ],
      "language": "python",
      "metadata": {},
@@ -568,11 +562,16 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Writing some_atoms.txt\n"
+        "Na\r\n",
+        "Fe\r\n",
+        "Na\r\n",
+        "Si\r\n",
+        "Pd\r\n",
+        "Na"
        ]
       }
      ],
-     "prompt_number": 29
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -638,14 +637,6 @@
       "* A loop over a set produces each element once, in arbitrary order.\n",
       "* Use sets to find unique things."
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
