--- a/lessons/guide-setdict/setdict-storage-learner.ipynb
+++ b/lessons/guide-setdict/setdict-storage-learner.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "setdict-storage"
+  "name": "setdict-storage-learner"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Storage"
+      "Storage (Learner Version)"
      ]
     },
     {
