Starting to convert Python lesson to learner/instructor notebooks

--- a/lessons/guide-pyblocks/pyblocks-basic-learner.ipynb
+++ b/lessons/guide-pyblocks/pyblocks-basic-learner.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "pyblocks-basic"
+  "name": "pyblocks-basic-learner"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,7 +12,7 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Basic Python Using IPythonBlocks"
+      "Basic Programming Using Python"
      ]
     },
     {
@@ -20,7 +20,14 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Variables and Assignment"
+      "Variables and Assignment (Learner Version)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* Basic arithmetic"
      ]
     },
     {
@@ -40,7 +47,14 @@
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* Store values in variables, which are created on demand"
+     ]
     },
     {
      "cell_type": "code",
@@ -51,7 +65,14 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* Display variable's value"
+     ]
     },
     {
      "cell_type": "code",
@@ -70,7 +91,14 @@
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* Use variable's value in new calculations"
+     ]
     },
     {
      "cell_type": "code",
@@ -89,7 +117,7 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -109,7 +137,14 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* Changing one variable's value doesn't affect another's"
+     ]
     },
     {
      "cell_type": "code",
@@ -151,6 +186,13 @@
      "prompt_number": 7
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* A more complex calculation"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -170,6 +212,13 @@
       }
      ],
      "prompt_number": 8
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* More readable if we give variables meaningful names"
+     ]
     },
     {
      "cell_type": "code",
@@ -194,6 +243,13 @@
      "prompt_number": 9
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* Note: variables must be given values before they can be used"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -208,12 +264,19 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-10-0fae4d15df1c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdouble_temp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtemp_celsius\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m<ipython-input-8-0fae4d15df1c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdouble_temp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtemp_celsius\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[0;31mNameError\u001b[0m: name 'temp_celsius' is not defined"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* This helps catch simple typing errors"
+     ]
     },
     {
      "cell_type": "code",
@@ -230,20 +293,12 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-11-7a2e5ea30a74>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtemp_kelvin\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtemp_far\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m32.0\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m5.0\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m9.0\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m273.15\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m<ipython-input-9-7a2e5ea30a74>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtemp_kelvin\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtemp_far\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m32.0\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m5.0\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m9.0\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m273.15\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[0;31mNameError\u001b[0m: name 'temp_far' is not defined"
        ]
       }
      ],
-     "prompt_number": 11
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "prompt_number": 9
     }
    ],
    "metadata": {}
