--- a/lessons/guide-setdict/setdict-overview.ipynb
+++ b/lessons/guide-setdict/setdict-overview.ipynb
@@ -117,18 +117,7 @@
      "source": [
       "<h2>Lessons</h2>\n",
       "\n",
-      "<table>\n",
-      "    <tr>\n",
-      "        <th></th>\n",
-      "        <th>Instructor</th>\n",
-      "        <th>Learner</th>\n",
-      "    </tr>\n",
-      "    <tr>\n",
-      "        <td>Sets</td>\n",
-      "        <td><a href=\"setdict-sets-instructor.ipynb\">I</a></td>\n",
-      "        <td><a href=\"setdict-sets-learner.ipynb\">L</a></td>\n",
-      "    </tr>\n",
-      "</table>"
+      "FIXME: add links"
      ]
     },
     {
