Regularizing format of setdict notebooks

--- a/lessons/guide-setdict/setdict-aggregate-instructor.ipynb
+++ b/lessons/guide-setdict/setdict-aggregate-instructor.ipynb
@@ -12,22 +12,14 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Sets and Dictionaries in Python"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
-      "Aggregation (Instructor Version)"
+      "Sets and Dictionaries in Python: Aggregation (Instructor Version)"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Objectives**\n",
+      "## Objectives\n",
       "\n",
       "* Recognize problems that can be solved by aggregating values.\n",
       "* Use dictionaries to aggregate values.\n",
@@ -38,7 +30,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Lesson**\n",
+      "## Lesson\n",
+      "\n",
       "To see how useful dictionaries can be, let's switch tracks and do some\n",
       "birdwatching. We'll start by asking how early in the day we saw each\n",
       "kind of bird? Our data consists of the date and time of the observation,\n",
@@ -402,7 +395,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Key Points**\n",
+      "## Key Points\n",
       "\n",
       "* Use dictionaries to count things.\n",
       "* Initialize values from actual data instead of trying to guess what values could \"never\" occur."
