--- a/lessons/guide-setdict/setdict-aggregate-learner.ipynb
+++ b/lessons/guide-setdict/setdict-aggregate-learner.ipynb
@@ -12,22 +12,14 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Sets and Dictionaries in Python"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
-      "Aggregation (Learner Version)"
+      "Sets and Dictionaries in Python: Aggregation (Learner Version)"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Objectives**\n",
+      "## Objectives\n",
       "\n",
       "* Recognize problems that can be solved by aggregating values.\n",
       "* Use dictionaries to aggregate values.\n",
@@ -38,7 +30,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Lesson**\n",
+      "## Lesson\n",
       "\n",
       "* How early in the day did we see each kind of bird?"
      ]
@@ -244,7 +236,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Key Points**\n",
+      "## Key Points\n",
       "\n",
       "* Use dictionaries to count things.\n",
       "* Initialize values from actual data instead of trying to guess what values could \"never\" occur."
