--- a/lessons/guide-setdict/setdict-dict-instructor.ipynb
+++ b/lessons/guide-setdict/setdict-dict-instructor.ipynb
@@ -12,22 +12,14 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Sets and Dictionaries in Python"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
-      "Dictionaries (Instructor Version)"
+      "Sets and Dictionaries in Python: Dictionaries (Instructor Version)"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Objectives**\n",
+      "## Objectives\n",
       "\n",
       "* Explain the similarities and differences between sets and dictionaries.\n",
       "* Perform common operations on dictionaries."
@@ -37,7 +29,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Lesson**\n",
+      "## Lesson\n",
       "\n",
       "Now that we know how to find out what kinds of atoms are in our\n",
       "inventory, we want to find out how many of each we have. Our input is a\n",
@@ -584,7 +576,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Key Points**\n",
+      "## Key Points\n",
       "\n",
       "* Use dictionaries to store key-value pairs with distinct keys.\n",
       "* Create dictionaries using `{k1:v1, k2:v2, ...}`.\n",
