--- a/lessons/guide-setdict/setdict-json-instructor.ipynb
+++ b/lessons/guide-setdict/setdict-json-instructor.ipynb
@@ -12,22 +12,14 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Sets and Dictionaries in Python"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
-      "JSON (Instructor Version)"
+      "Sets and Dictionaries in Python: JSON (Instructor Version)"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Objectives**\n",
+      "## Objectives\n",
       "\n",
       "* Correctly define \"JSON\" and give simple examples of valid JSON structures.\n",
       "* Describe JSON's strengths and weaknesses as a storage format.\n",
@@ -38,7 +30,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Lesson**\n",
+      "## Lesson\n",
       "\n",
       "The example above used two data file formats: one for storing molecular\n",
       "formulas, the other for storing inventory. Both formats were specific to\n",
@@ -402,7 +394,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Key Points**\n",
+      "## Key Points\n",
       "\n",
       "* The JSON data format can represent arbitrarily-nested lists and dictionaries containing strings, numbers, Booleans, and `None`.\n",
       "* Using JSON reduces the code we have to write ourselves and improves interoperability with other programming languages.\n",
