--- a/lessons/guide-setdict/setdict-json-learner.ipynb
+++ b/lessons/guide-setdict/setdict-json-learner.ipynb
@@ -12,22 +12,14 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Sets and Dictionaries in Python"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
-      "JSON (Learner Version)"
+      "Sets and Dictionaries in Python: JSON (Learner Version)"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Objectives**\n",
+      "## Objectives\n",
       "\n",
       "* Correctly define \"JSON\" and give simple examples of valid JSON structures.\n",
       "* Describe JSON's strengths and weaknesses as a storage format.\n",
@@ -38,7 +30,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Lesson**\n",
+      "## Lesson\n",
       "\n",
       "* Custom data formats require custom code, which requires debugging and maintenance\n",
       "* Use JavaScript Object Notation (JSON) instead\n",
@@ -271,16 +263,15 @@
      "source": [
       "* The `read_inventory` and `read_formulas` functions no longer need to be written (debugged, documented, maintained, ...)\n",
       "* Programs in other languages can read our data files\n",
-      "* But:\n",
-      "  * JSON doesn't support comments\n",
-      "  * And doesn't handle aliasing"
+      "* But JSON doesn't support comments\n",
+      "* And doesn't handle aliasing"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Key Points**\n",
+      "## Key Points\n",
       "\n",
       "* The JSON data format can represent arbitrarily-nested lists and dictionaries containing strings, numbers, Booleans, and `None`.\n",
       "* Using JSON reduces the code we have to write ourselves and improves interoperability with other programming languages.\n",
