--- a/lessons/guide-setdict/setdict-nanotech-instructor.ipynb
+++ b/lessons/guide-setdict/setdict-nanotech-instructor.ipynb
@@ -12,22 +12,14 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Sets and Dictionaries in Python"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
-      "Nanotech Inventory (Instructor Version)"
+      "Sets and Dictionaries in Python: Nanotech Inventory (Instructor Version)"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Objectives**\n",
+      "## Objectives\n",
       "\n",
       "* Create and manipulate nested dictionaries.\n",
       "* Explain the similarities and differences between nested dictionaries and nested lists."
@@ -37,7 +29,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Lesson**\n",
+      "## Lesson\n",
       "\n",
       "We can now solve Fan's original nanotech inventory problem. As explained\n",
       "in the introduction, our goal is to find out how many molecules of\n",
@@ -951,7 +943,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Key Points**\n",
+      "## Key Points\n",
       "\n",
       "* Whenever names are used to label things, consider using dictionaries to store them.\n",
       "* Use nested dictionaries to store hierarchical values (like molecule names and atomic counts).\n",
