--- a/lessons/guide-setdict/setdict-sets-instructor.ipynb
+++ b/lessons/guide-setdict/setdict-sets-instructor.ipynb
@@ -12,22 +12,14 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Sets and Dictionaries in Python"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
-      "Sets (Instructor Version)"
+      "Sets and Dictionaries in Python: Sets (Instructor Version)"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<h3>Objectives</h3>\n",
+      "## Objectives\n",
       "\n",
       "-   Explain why some programs that use lists become proportionally\n",
       "    slower as data sizes increase.\n",
@@ -40,7 +32,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<h3>Lesson</h3>\n",
+      "## Lesson\n",
       "\n",
       "Let's start with something simpler than our actual inventory problem.\n",
       "Suppose we have a list of all the atoms in the warehouse, and we want to\n",
@@ -827,7 +819,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<h3>Keypoints</h3>\n",
+      "## Keypoints\n",
       "\n",
       "-   Use sets to store distinct unique values.\n",
       "-   Create sets using `set()` or `{v1, v2, ...}`.\n",
