--- a/lessons/guide-setdict/setdict-sets-learner.ipynb
+++ b/lessons/guide-setdict/setdict-sets-learner.ipynb
@@ -12,22 +12,14 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Sets and Dictionaries in Python"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
-      "Sets (Learner Version)"
+      "Sets and Dictionaries in Python: Sets (Learner Version)"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Objectives**\n",
+      "## Objectives\n",
       "\n",
       "* Explain why some programs that use lists become proportionally slower as data sizes increase.\n",
       "* Explain the three adjectives in \"unordered collection of distinct values\".\n",
@@ -38,7 +30,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Lesson**\n",
+      "## Lesson\n",
       "\n",
       "* Keeping track of unique atoms using a list:"
      ]
@@ -629,7 +621,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Key Points**\n",
+      "## Key Points\n",
       "\n",
       "* Use sets to store distinct unique values.\n",
       "* Create sets using `set()` or `{v1, v2, ...}`.\n",
