--- a/lessons/guide-setdict/setdict-storage-instructor.ipynb
+++ b/lessons/guide-setdict/setdict-storage-instructor.ipynb
@@ -12,22 +12,14 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Sets and Dictionaries in Python"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
-      "Storage (Instructor Version)"
+      "Sets and Dictionaries in Python: Storage (Instructor Version)"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Objectives**\n",
+      "## Objectives\n",
       "\n",
       "* Draw a diagram showing how hash tables are implemented, and correctly label the main parts.\n",
       "* Explain the purpose of a hash function.\n",
@@ -41,7 +33,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Lesson**\n",
+      "## Lesson\n",
       "\n",
       "Let's create a set, add the string `'lithium'` to it (as a single item, not character by character), and print the result:"
      ]
@@ -358,7 +350,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Key Points**\n",
+      "## Key Points\n",
       "\n",
       "* Sets are stored in hash tables, which guarantee fast access for arbitrary values.\n",
       "* The values in sets must be immutable to prevent hash tables misplacing them.\n",
