--- a/lessons/guide-setdict/setdict-dict-learner.ipynb
+++ b/lessons/guide-setdict/setdict-dict-learner.ipynb
@@ -12,22 +12,14 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Sets and Dictionaries in Python"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
-      "Dictionaries (Learner Version)"
+      "Sets and Dictionaries in Python: Dictionaries (Learner Version)"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Objectives**\n",
+      "## Objectives\n",
       "\n",
       "* Explain the similarities and differences between sets and dictionaries.\n",
       "* Perform common operations on dictionaries."
@@ -37,7 +29,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Lesson**\n",
+      "## Lesson\n",
       "\n",
       "* Use a *dictionary* to keep track of key-value pairs\n",
       "* Its *keys* are like the elements of a set: unique, unordered, and immutable\n",
@@ -406,7 +398,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Key Points**\n",
+      "## Key Points\n",
       "\n",
       "* Use dictionaries to store key-value pairs with distinct keys.\n",
       "* Create dictionaries using `{k1:v1, k2:v2, ...}`.\n",
