--- a/lessons/guide-setdict/setdict-nanotech-learner.ipynb
+++ b/lessons/guide-setdict/setdict-nanotech-learner.ipynb
@@ -12,22 +12,14 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Sets and Dictionaries in Python"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
-      "Nanotech Inventory (Learner Version)"
+      "Sets and Dictionaries in Python: Nanotech Inventory (Learner Version)"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Objectives**\n",
+      "## Objectives\n",
       "\n",
       "* Create and manipulate nested dictionaries.\n",
       "* Explain the similarities and differences between nested dictionaries and nested lists."
@@ -37,7 +29,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Lesson**\n",
+      "## Lesson\n",
       "\n",
       "* How many molecules of various kinds can we make from the atoms in our warehouse?\n",
       "* Inventory stored in files like this:"
@@ -842,7 +834,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Key Points**\n",
+      "## Key Points\n",
       "\n",
       "* Whenever names are used to label things, consider using dictionaries to store them.\n",
       "* Use nested dictionaries to store hierarchical values (like molecule names and atomic counts).\n",
